fix: moving overflow hidden from container to the html solved the animation overflow problem

--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -4,7 +4,7 @@
 	@include sectionsMargin;
 
 	padding: 30px;
-	overflow-x: hidden;
+	
 }
 
 .infoWrap {
